# ogn_tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  LICENSE  README.fr.md  README.md  collector.py  config.py  dashboard.py  diag_fk50887.py  export_rx_heardby_fk50887.py  export_rx_samples.py  pyproject.toml
.streamlit/: config.toml
analysis/: coverage_dataset.py
apps/: dashboard.py
apps/ui/: sections.py
docs/: PRODUCT_POSITIONING.md  RF_FEATURES_INDEX.md  RF_SCOPE_GUARDRAILS.md
docs/rf_features/: 01_polar_coverage.md  02_rssi_vs_distance.md  03_altitude_vs_distance.md  04_shadow_zones.md  05_station_range.md  06_antenna_diagnostics.md  07_radio_horizon.md  08_terrain_analysis.md  09_station_comparison.md  10_station_quality.md
scripts/: build_coverage_grid.py  collector.py  test_aprs_servers.py
src/ogn_tool/: cli.py  config.py  db.py  rf_analysis.py
src/ogn_tool/analysis/: altitude_distance.py  antenna_health.py  grid_loader.py  polar.py  radio_horizon.py  shadow_map.py  signal_distance.py  station_compare.py  station_quality.py  station_range.py  terrain.py
tests/: test_collector_parsing.py  test_db_schema.py
tools/: backfill_ts_epoch.py  build_coverage_grid.py  check_rx_fk50887.py  export_rx_csv.py  export_rx_heardby_fk50887.py  optimize_db.py  query.py  rx_stats.py  top_rx_distances.py
tools/analysis/: coverage_dataset.py
